# mipt-5-grade-cpp-base

./: .gitignore  CMakeLists.txt  REQUIREMENTS.md  build.sh  run.sh  vcpkg.json
tasks/: CMakeLists.txt
tasks/1/: 02.02.cpp  02.03.cpp  02.06.cpp  02.07.cpp  02.08-2.cpp  02.08.cpp  CMakeLists.txt  task1.cpp
tasks/2/: 02.10.cpp  03.01.cpp  03.02.cpp  03.03.cpp  03.04.cpp  03.05.cpp  03.06.cpp  03.07.cpp  03.09.cpp  03.10.cpp  CMakeLists.txt
tasks/3/: 04.01.cpp  04.02.cpp  04.03.cpp  04.04.cpp  04.05.cpp  04.06.cpp  04.07.cpp  04.08.cpp  04.09.cpp  04.10.cpp  05.01.cpp  05.02.cpp  05.03.cpp  05.04.cpp  05.05.cpp  CMakeLists.txt
tasks/3/06.01/: CMakeLists.txt  Rational.cpp  Rational.hpp  main.cpp
tasks/3/06.02/: CMakeLists.txt  main.cpp  rational.cpp  rational.cppm  rational_mixins.cppm
tasks/3/06.03/: CMakeLists.txt  benchmark.sh
tasks/4/: 05.05.cpp  07.01.cpp  07.02.cpp  07.03.cpp  08.01.cpp  08.03.cpp  08.04.cpp  08.05.cpp  CMakeLists.txt
tasks/4/06.05/: 06.05.cpp  CMakeLists.txt  test_v1.cpp  test_v2.cpp
tasks/4/07.04/: CMakeLists.txt  sort.hpp  test.cpp
tasks/4/07.05/: 07.05.cpp  CMakeLists.txt
tasks/4/08.02/: 08.02.cpp  08.02.hpp  CMakeLists.txt  test_div.cpp
tests/1/: CMakeLists.txt  test1.cpp
