add_executable(02.10 02.10.cpp)
add_executable(03.01 03.01.cpp)
add_executable(03.02 03.02.cpp)
add_executable(03.03 03.03.cpp)
add_executable(03.04 03.04.cpp)
add_executable(03.05 03.05.cpp)
add_executable(03.06 03.06.cpp)
add_executable(03.07 03.07.cpp)
add_executable(03.09 03.09.cpp)
add_executable(03.10 03.10.cpp)