add_executable(04.01 04.01.cpp)
add_executable(04.02 04.02.cpp)
add_executable(04.03 04.03.cpp)
add_executable(04.04 04.04.cpp)
add_executable(04.05 04.05.cpp)
add_executable(04.06 04.06.cpp)
add_executable(04.07 04.07.cpp)
add_executable(04.08 04.08.cpp)
add_executable(04.09 04.09.cpp)
add_executable(04.10 04.10.cpp)

add_executable(05.01 05.01.cpp)
add_executable(05.02 05.02.cpp)
add_executable(05.03 05.03.cpp)
add_executable(05.04 05.04.cpp)
add_executable(05.05 05.05.cpp)

add_subdirectory(06.01)
add_subdirectory(06.02)
add_subdirectory(06.03)
